objects/Nebula__LoggerSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls the functionality of Logger</description>
    <fields>
        <fullName>Nebula__DefaultLogOwner__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <inlineHelpText>Specifies the default owner for new Log__c records. This can be a user ID, a username, a queue ID, or a queue&apos;s developer name.</inlineHelpText>
        <label>Log Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__DefaultLogPurgeAction__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <defaultValue>&apos;Delete&apos;</defaultValue>
        <inlineHelpText>Sets the value of Log__c.LogPurgeAction__c, which is used by the batch job LogBatchPurger to indicate the action that should be taken for a Log__c record when LogRetentionDate__c &lt; TODAY.</inlineHelpText>
        <label>Log Purge Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__DefaultLogScenario__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <description>Sets a default scenario for the transaction</description>
        <inlineHelpText>Sets a default scenario for the transaction</inlineHelpText>
        <label>Log Scenario</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__DefaultLogShareAccessLevel__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <defaultValue>&apos;Read&apos;</defaultValue>
        <description>Uses Apex managed sharing to grants users read or edit access to their log records (on insert only). When no access level is specified, no Apex sharing logic is executed. This only gives record-level access - users will still need to be granted access to the Log__c object using permission sets or profiles.</description>
        <inlineHelpText>Uses Apex managed sharing to grants users read or edit access to their log records (on insert only). When no access level is specified, no Apex sharing logic is executed. This only gives record-level access - users will still need to be granted access to the Log__c object using permission sets or profiles.</inlineHelpText>
        <label>Log Access Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__DefaultNumberOfDaysToRetainLogs__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <defaultValue>14</defaultValue>
        <description>This value is used to set the field Log__c.LogRetentionDate__c,  which is then used by LogBatchPurger to delete old logs. To keep  logs indefinitely, set this field to blank (null).</description>
        <inlineHelpText>This value is used to set the field Log__c.LogRetentionDate__c,  which is then used by LogBatchPurger to delete old logs. To keep  logs indefinitely, set this field to blank (null).</inlineHelpText>
        <label>Days to Retain Logs</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__DefaultPlatformEventStorageLocation__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <defaultValue>&apos;CUSTOM_OBJECTS&apos;</defaultValue>
        <description>Defaults to CUSTOM_OBJECTS. This controls the default location where LogEntryEvent__e records are stored - when null, LogEntryEvent__e records will not be stored.</description>
        <inlineHelpText>Defaults to CUSTOM_OBJECTS. This controls the default location where LogEntryEvent__e records are stored - when null, LogEntryEvent__e records will not be stored.</inlineHelpText>
        <label>Platform Event Storage Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__DefaultSaveMethod__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <defaultValue>&apos;EVENT_BUS&apos;</defaultValue>
        <description>Defaults to EVENT_BUS. This controls the default save method used by Logger when calling saveLog(). In most situations, EVENT_BUS should be used.</description>
        <inlineHelpText>Defaults to EVENT_BUS. This controls the default save method used by Logger when calling saveLog(). In most situations, EVENT_BUS should be used.</inlineHelpText>
        <label>Save Method</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__EnableStatusApiCallout__c</fullName>
        <complianceGroup>PII;GDPR</complianceGroup>
        <defaultValue>true</defaultValue>
        <description>When enabled, an async callout is made to https://api.status.salesforce.com to get additional details about the current org, including the org&apos;s release version and release number. This information is then stored on the Log__c record.</description>
        <inlineHelpText>When enabled, an async callout is made to https://api.status.salesforce.com to get additional details about the current org, including the org&apos;s release version and release number. This information is then stored on the Log__c record.</inlineHelpText>
        <label>DEPRECATED: Enable Status API Callout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__EnableSystemMessages__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <defaultValue>true</defaultValue>
        <description>When enabled, log entries may be generated that contain additional details about the logging system.</description>
        <inlineHelpText>When enabled, log entries may be generated that contain additional details about the logging system.</inlineHelpText>
        <label>DEPRECATED: Enable System Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__IsAnonymousModeEnabled__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When enabled, any logs generated will not have any user-specific details set - any fields related to the User, Profile, etc. will be null. Note: this feature only works properly when using the save method EVENT_BUS.</inlineHelpText>
        <label>Enable Anonymous Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__IsApexSystemDebugLoggingEnabled__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When enabled, Logger will automatically call Apex&apos;s System.debug(). To help with performance, this option should be disabled in production unless you are actively troubleshooting an issue.</inlineHelpText>
        <label>Enable Apex System.debug()</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__IsDataMaskingEnabled__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When enabled, any data-mask rules (configured in LogEntryDataMaskRule__mdt) will be automatically applied to log entry messages.</inlineHelpText>
        <label>Enable Data Masking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__IsEnabled__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Controls if Logger is enabled for the specified level (organization, profile, or user)</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__IsJavaScriptConsoleLoggingEnabled__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When enabled, Logger will automatically call the browser&apos;s console.log() function when logging via lightning components. To help with performance, this option should be disabled in production unless you are actively troubleshooting an issue.</inlineHelpText>
        <label>Enable JavaScript console.log()</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__IsPlatformEventStorageEnabled__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <defaultValue>true</defaultValue>
        <description>Controls if LogEntryEvent__e platform events are transformed &amp; stored in the custom objects Log__c and LogEntry__c (when IsSavingEnabled__c == true).</description>
        <inlineHelpText>Controls if LogEntryEvent__e platform events are transformed &amp; stored in the custom objects Log__c and LogEntry__c (when IsSavingEnabled__c == true).</inlineHelpText>
        <label>DEPRECATED: Store Platform Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__IsRecordFieldStrippingEnabled__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When enabled, any time an SObject record is logged, only fields that the current user can access will be included in the record&apos;s JSON.</inlineHelpText>
        <label>Strip Inaccessible Record Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__IsSavingEnabled__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <defaultValue>true</defaultValue>
        <description>Controls if saving is enabled - when disabled, any calls to saveLog() are ignored.</description>
        <inlineHelpText>Controls if saving is enabled - when disabled, any calls to saveLog() are ignored.</inlineHelpText>
        <label>Enable Saving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nebula__LoggingLevel__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <defaultValue>&apos;DEBUG&apos;</defaultValue>
        <label>Logging Level</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Logger Settings</label>
    <listViews>
        <fullName>Nebula__All</fullName>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>Nebula__IsEnabled__c</columns>
        <columns>Nebula__LoggingLevel__c</columns>
        <columns>Nebula__DefaultSaveMethod__c</columns>
        <columns>Nebula__IsApexSystemDebugLoggingEnabled__c</columns>
        <columns>Nebula__IsJavaScriptConsoleLoggingEnabled__c</columns>
        <columns>Nebula__IsDataMaskingEnabled__c</columns>
        <columns>Nebula__IsRecordFieldStrippingEnabled__c</columns>
        <columns>Nebula__IsAnonymousModeEnabled__c</columns>
        <columns>Nebula__DefaultLogShareAccessLevel__c</columns>
        <columns>Nebula__DefaultNumberOfDaysToRetainLogs__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>